z-index fixed

--- a/app/styles/utils/_base.scss
+++ b/app/styles/utils/_base.scss
@@ -51,7 +51,7 @@ h6{
 		position: fixed;
 		top: 22px;
 		left: 20%;
-		z-index: 99999;
+		z-index: 99998;
 	}
 
 	.bar{
